--- a/chat_Minerva.ipynb
+++ b/chat_Minerva.ipynb
@@ -245,57 +245,90 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 97,
+      "execution_count": 99,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Hi! What major should I choose?\n",
-            "Bot: Hi there! Choosing a major is an exciting step. Since you have experience with Machine Learning, it sounds like you enjoy technical subjects.  To give you some good advice, could you tell me:\n",
+            "Hi! How are you doing? \n",
+            "Bot: Hi! I'm doing well, thanks for asking. 😊  How can I help you today? \n",
             "\n",
-            "* **What year are you at Northwestern?**  (Freshman, Sophomore, etc.)\n",
+            "----------------------------------------\n",
+            "What major should I choose?\n",
+            "Bot: It seems you're interested in exploring majors! To give you the best advice, I need a little more information about you. Could you tell me:\n",
+            "\n",
+            "* **What year are you at Northwestern?** (Freshman, Sophomore, etc.)\n",
             "* **What school are you in?** (Weinberg, McCormick, Bienen, etc.)\n",
-            "* **What are you hoping to do with your Machine Learning knowledge?** (Are you interested in research, data science, software engineering, something else?)\n",
             "\n",
-            "Knowing your academic goals will help me point you towards majors where you can use and expand your skills! 😄 \n",
-            "\n",
-            "----------------------------------------\n",
-            "?\n",
-            "Bot: Hey there! It seems like you have a question. Can you tell me what you're wondering about?  \n",
-            "\n",
-            "I'm happy to help with anything related to your academics, whether it's figuring out your major, exploring different classes, finding research opportunities, or anything else. 😊  Just let me know what's on your mind! \n",
+            "Once I have a better understanding of where you are in your academic journey, we can dive into exploring some majors that might be a great fit for you. 😊 \n",
             "\n",
             "----------------------------------------\n",
-            "I am Weinberg sophomore\n",
-            "Bot: Hi there!  So you're a Weinberg sophomore and thinking about potential majors. That's great! It's a good time to start narrowing down your options.\n",
+            "I am a Freshman at Weinberg\n",
+            "Bot: Welcome to Northwestern and Weinberg, freshman!  It's fantastic you're thinking about majors already. It's great to start exploring early. \n",
             "\n",
-            "You've mentioned interest in Machine Learning and Mental Health Treatments before.  Combining your Machine Learning skills with your interest in mental health could open up some really interesting paths. \n",
+            "I see you've talked a lot about mental health and celebrities.  It seems like you have a strong interest in those areas, and with your Machine Learning background, you could find some really unique ways to combine them! \n",
             "\n",
-            "Do you have any particular career goals in mind at this point? For example, are you interested in research, technology, or a more direct helping role?  \n",
-            "\n",
-            "This will help me suggest some Weinberg majors that might be a good fit for you. 😊 \n",
-            "\n",
-            "----------------------------------------\n",
-            "So what degree should I go with?\n",
-            "Bot: Okay, you're a Weinberg sophomore trying to pick a major. That's great! You've shown interest in mental health and celebrities, and you've got a background in Machine Learning.  \n",
-            "\n",
-            "To help me give you some tailored suggestions, could you tell me a little more about what kind of career you're imagining? \n",
+            "To give you some personalized major recommendations, could you tell me a little more about what you'd like to DO with those interests?\n",
             "\n",
             "For example:\n",
             "\n",
-            "* **Do you want to use your Machine Learning skills directly in your career?** \n",
-            "* **Are you more drawn to the creative side of celebrity and entertainment?**\n",
-            "* **Is your interest in mental health more about understanding the science behind it or working directly with people?**\n",
+            "* **Are you interested in the psychology behind celebrity culture?**\n",
+            "* **Do you want to use Machine Learning to analyze mental health trends or develop new treatments?**\n",
+            "* **Would you be interested in working in the entertainment industry, perhaps applying data science to marketing or talent management?** \n",
             "\n",
-            "Once I know a little more about where you see yourself going, I can give you some good major options. 😄 \n",
+            "Let's brainstorm together and find the perfect major for you! 😄 \n",
             "\n",
             "----------------------------------------\n",
-            "?\n",
-            "Bot: It looks like you need some help figuring things out! What's on your mind? \n",
+            "So what are my next steps?\n",
+            "Bot: It's great that you're a Freshman at Weinberg and already thinking about your major!  It's smart to plan ahead.  Since you're interested in mental health and celebrities, here are some next steps we can take:\n",
             "\n",
-            "I'm happy to help with any questions you have, whether it's about choosing a major, planning your courses, finding resources at Northwestern, or anything else related to your academics.  Just let me know! 😄 \n",
+            "1. **Explore Weinberg Majors:** Let's delve into specific Weinberg majors that align with your interests. We could consider:\n",
+            "    * **Psychology:** A classic choice for understanding mental health, and you could focus on aspects related to celebrity and fame.\n",
+            "    * **Communication Studies:**  This could be fascinating for analyzing the influence of celebrity culture on society.\n",
+            "    * **Sociology:** This major can help you understand how celebrity culture intersects with social structures and behaviors. \n",
+            "\n",
+            "2. **Connect Your Interests with Machine Learning:**  Let's discuss how your Machine Learning expertise could enhance these majors. You might consider:\n",
+            "    * **Research:**  Northwestern has many research opportunities, and you could apply Machine Learning to psychology or communication research projects.\n",
+            "    * **Data Science:**  You could use your skills to analyze data related to mental health or the entertainment industry. \n",
+            "\n",
+            "3. **Meet with Faculty:** I strongly recommend connecting with faculty in the departments of Psychology, Communication Studies, and Sociology.  They can provide valuable insights into the majors, potential research projects, and career paths.\n",
+            "\n",
+            "4. **Attend Events:** Look for lectures, workshops, and events related to mental health and the entertainment industry. Northwestern has a vibrant campus life with many opportunities to learn and connect.\n",
+            "\n",
+            "Remember, I'm here to guide you. Let's schedule a meeting to discuss your interests further and start exploring these exciting options! 😄 \n",
+            "\n",
+            "----------------------------------------\n",
+            "I am interested in psychology behind celebrity culture\n",
+            "Bot: That's fascinating!  It sounds like you're thinking about how psychology plays a role in the world of celebrities. To give you more tailored advice, could you tell me what year you are at Weinberg?\n",
+            "\n",
+            "Once I know that, I can suggest some courses and other steps that might be helpful for exploring this interest further! 😊 \n",
+            "\n",
+            "----------------------------------------\n",
+            "I am a Freshman, now please suggest me courses\n",
+            "Bot: Okay, great! You're a Weinberg freshman interested in the psychology of celebrity culture. This is a really cool area to explore!  Here are some courses I recommend checking out:\n",
+            "\n",
+            "**For Psychology Fundamentals:**\n",
+            "* **PSYCH 110: Introduction to Psychology:**  This is a great starting point to get a broad overview of the field.\n",
+            "* **PSYCH 201: Statistical Methods in Psychology:**  Since you have a Machine Learning background, this course will be very manageable and useful for understanding research in psychology.\n",
+            "\n",
+            "**Courses to Connect with Celebrity Culture:**\n",
+            "* **SOC 206: Popular Culture:**  This course often covers celebrity as a topic, and it's a great way to examine the sociological side of fame.\n",
+            "* **COMM_ST 225: Communication and Culture:** This explores how communication shapes our understanding of cultural phenomena, which definitely includes celebrity.\n",
+            "\n",
+            "**Looking Ahead:**\n",
+            "* **PSYCH 353: Social Psychology:**  This upper-level course delves into social influence, persuasion, and group dynamics - all relevant to celebrity and fan behavior.\n",
+            "\n",
+            "**Other Tips:**\n",
+            "* **Talk to Professors:** Don't hesitate to reach out to professors teaching these courses. They can give you more insights into the course content and whether it aligns with your interests.\n",
+            "* **Look for Special Topics:** Keep an eye out for \"Special Topics\" courses in psychology, sociology, and communication studies. These often cover more niche areas and might touch on celebrity culture.\n",
+            "\n",
+            "Remember, exploring different courses and talking to professors is a great way to discover the best path for you. Feel free to schedule a meeting if you want to discuss your academic interests further! 😄 \n",
+            "\n",
+            "----------------------------------------\n",
+            "Thank you, bye!\n",
+            "Bot: You're very welcome! It was great chatting with you.  Good luck with your courses and exploring majors. Remember, I'm here if you have any more questions or want to discuss things further. 😊 Bye! \n",
             "\n",
             "----------------------------------------\n",
             "quit\n",
